--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -2,7 +2,34 @@
 @tailwind components;
 @tailwind utilities;
 
-:root {
+@layer base {
+  /* Firefox */
+  * {
+    scrollbar-width: thin;
+    scrollbar-color: theme('backgroundColor.gray.800') theme('backgroundColor.gray.900');
+  }
+
+  /* Chrome, Edge, and Safari */
+  *::-webkit-scrollbar {
+    width: 12px;
+  }
+
+  *::-webkit-scrollbar-track {
+    background: theme('backgroundColor.gray.900');
+  }
+
+  *::-webkit-scrollbar-thumb {
+    background-color: theme('backgroundColor.gray.800');
+    border-radius: 9999px;
+    border: 3px solid theme('backgroundColor.gray.900');
+  }
+
+  *::-webkit-scrollbar-thumb:hover {
+    background-color: theme('backgroundColor.gray.700');
+  }
+}
+
+/* :root {
   --foreground-rgb: 0, 0, 0;
   --background-start-rgb: 214, 219, 220;
   --background-end-rgb: 255, 255, 255;
@@ -14,9 +41,9 @@
     --background-start-rgb: 0, 0, 0;
     --background-end-rgb: 0, 0, 0;
   }
-}
+} */
 
-body {
+/* body {
   color: rgb(var(--foreground-rgb));
   background: linear-gradient(
       to bottom,
@@ -24,4 +51,4 @@ body {
       rgb(var(--background-end-rgb))
     )
     rgb(var(--background-start-rgb));
-}
+} */
